# ProcesamientoParalelo_Imagen_OpenCL

./: .gitignore  CMakeLists.txt  kernel.cl  main.c
